--- a/example/README
+++ b/example/README
@@ -1,8 +1,11 @@
 This folder contains a set of input example files
-To run DICE, and to start generating ICs, just type
+To run DICE, and to start generating ICs, just type one of these line:
+
+dice dice_iso.config 		# Isolated disk
+dice dice_iso_streams.config	# Isolated disk with 2 streams
+dice dice_merger.config		# Merging pair
+
 Warning: This example requires at least 8Gb of memory, and even more on OSX systems.
 Lower the level_grid parameter in order to use less memory
-
-	dice dice.config
 
 
