README edited online with Bitbucket

--- a/README
+++ b/README
@@ -1,10 +1,11 @@
 [1]: https://bitbucket.org/vperret/dice/wiki/Content
 [2]: https://bitbucket.org/rteyssie/ramses
+[3]: https://bitbucket.org/rteyssie/ramses/src/fc657574bb4a06b3647d178a88cfe7943b02a4fd/trunk/ramses/patch/init/dice/?at=master
 
 ## This is the [DICE](https://bitbucket.org/vperret/dice) bitbucket repository.
 
 DICE is an open source code to model initial conditions of idealised galaxies to study their secular evolution, or to study more complex interactions such as mergers or compact groups using N-Body/hydro codes.
-DICE is fully compatible with [Ramses][2] thanks to the dice-ramses patch.
+DICE writes the initial conditions in the **Gadget1** or **Gadget2** format and is fully compatible with [Ramses][2] thanks to the **[dice-ramses][3]** patch.
 
 You can go to the user's guide [here][1].
 
